// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination on Web renders correctly 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
      dir="auto"
    >
      Showing 1 - 20 of 21 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div />
    <div>
      <a
        href="./2"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Next
              <span
                className="c3"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders next link 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
      dir="auto"
    >
      Showing 1 - 20 of 41 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div />
    <div>
      <a
        href="./2"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Next
              <span
                className="c3"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders prev and next link 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
      dir="auto"
    >
      Showing 21 - 40 of 41 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div>
      <a
        href="./1"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-previous"
        >
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Previous
              <span
                className="c3"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div>
      <a
        href="./3"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Next
              <span
                className="c3"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders prev link 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
      dir="auto"
    >
      Showing 41 - 41 of 41 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div>
      <a
        href="./2"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-previous"
        >
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Previous
              <span
                className="c3"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
        </div>
      </a>
    </div>
    <div />
  </div>
</div>
`;

exports[`Pagination on Web renders results message 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
}

.c2 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

.c3 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    margin-top: 30px;
  }
}

@media (min-width:768px) {
  .c1 {
    left: 0;
    right: 0;
    position: absolute;
  }
}

@media (min-width:768px) {
  .c2 {
    border-top-width: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      data-testid="results-message"
      dir="auto"
    >
      Showing 1 - 20 of 21 results
    </div>
  </div>
  <div
    className="c2"
  >
    <div />
    <div>
      <a
        href="./2"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Next
              <span
                className="c3"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination on Web renders with hidden results 1`] = `
.c2 {
  display: none;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border-style: solid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-top-color: #DBDBDB;
  border-top-width: 1px;
}

@media (min-width:768px) {
  .c2 {
    display: inline;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
    <div>
      <a
        href="./2"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          data-testid="pagination-button-next"
        >
          <div
            dir="auto"
          >
            <span
              dir="auto"
            >
              Next
              <span
                className="c2"
                dir="auto"
              >
                 page
              </span>
            </span>
          </div>
          <svg
            height={12}
            width={7}
          >
            <g
              fill="#006699"
            >
              <path />
            </g>
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;
